tests/ui/rfcs/rfc-2632-const-trait-impl/default-method-body-is-const-same-trait-ck.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/default-method-body-is-const-same-trait-ck.rs:1:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `Runtime: ~const Compat` is not satisfied
  --> $DIR/default-method-body-is-const-same-trait-ck.rs:8:12
   |
LL |         ().a()
   |            ^ the trait `~const Compat` is not implemented for `Runtime`
   |
   = help: the trait `Compat` is implemented for `Runtime`
note: required by a bound in `Tr::a`
  --> $DIR/default-method-body-is-const-same-trait-ck.rs:3:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ required by this bound in `Tr::a`
LL | pub trait Tr {
LL |     fn a(&self) {}
   |        - required by a bound in this associated function

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
